--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,21 @@
+html {
+  box-sizing: border-box;
+
+  height: 100%;
+  font-size: 16px;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+
+  padding: 0;
+  margin: 0;
+}
+
 body {
+  height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
