--- a/src/components/Period/Period.css
+++ b/src/components/Period/Period.css
@@ -17,26 +17,37 @@
 }
 
 .button {
-    padding: 3px;
-    border: 1px solid black;
-    border-radius: 5px;
-    background-color: #F0F8FF;
+    padding: 7px;
+    background-color: #F0EDED;
     font-size: 0.75rem;
-    margin: 0 2px 2px 0;
+    margin: 0 3px 3px 0;
+    border-style: solid;
   }
 
 .button.hover {
-  background-color: #DEB887;
-}
-
-.button.green {
-    background-color: green;
+    border: 2px solid black;
+    border-radius: 5px;
 }
 
 .button.red {
-    background-color: red;
+    background-color: #F06E37;
+    border-color: #F06E37;
 }
 
 .button.orange {
-    background-color: orange;
+    background-color: #EDB761;
+    border-color: #EDB761;
+}
+.button.red.hover {
+    background-color: #F06E37;
+    border-color: #F06E37;
+    border: 2px solid black;
+    border-radius: 5px;
+}
+
+.button.orange.hover {
+    background-color: #EDB761;
+    border-color: #EDB761;
+    border: 2px solid black;
+    border-radius: 5px;
 }
