--- a/src/components/Period/Period.css
+++ b/src/components/Period/Period.css
@@ -1,19 +1,16 @@
 .period1D {
     display: flex;
     flex-wrap: wrap;
-
 }
 
 .period2D {
     display: flex;
     flex-wrap: wrap;
-
 }
 
 .period4D {
     display: flex;
     flex-wrap: wrap;
-
 }
 
 .button {
@@ -22,10 +19,15 @@
     font-size: 0.75rem;
     margin: 0 3px 3px 0;
     border-style: solid;
-  }
+}
+
+.button.notHovered {
+    opacity: 0.5;
+}
 
 .button.hover {
-    border: 2px solid black;
+
+    border: 3px solid black;
     border-radius: 5px;
 }
 
@@ -34,20 +36,33 @@
     border-color: #F06E37;
 }
 
+.button.red.notHovered {
+    background-color: #F06E37;
+    border-color: #F06E37;
+    opacity: 0.5; 
+}
+
 .button.orange {
     background-color: #EDB761;
     border-color: #EDB761;
 }
+
+.button.orange.notHovered {
+    background-color: #EDB761;
+    border-color: #EDB761;
+    opacity: 0.5;
+}
+
 .button.red.hover {
     background-color: #F06E37;
     border-color: #F06E37;
-    border: 2px solid black;
+    border: 3px solid black;
     border-radius: 5px;
 }
 
 .button.orange.hover {
     background-color: #EDB761;
     border-color: #EDB761;
-    border: 2px solid black;
+    border: 3px solid black;
     border-radius: 5px;
 }
