--- a/src/components/Period/Period.css
+++ b/src/components/Period/Period.css
@@ -19,6 +19,11 @@
     font-size: 0.75rem;
     margin: 0 3px 3px 0;
     border-style: solid;
+    -webkit-transition: opacity 0.3s ease-in-out;
+    -moz-transition: opacity 0.3s ease-in-out;
+    -ms-transition: opacity 0.3s ease-in-out;
+    -o-transition: opacity 0.3s ease-in-out;
+    transition: opacity 0.3s ease-in-out;
 }
 
 .button.notHovered {
@@ -27,7 +32,7 @@
 
 .button.hover {
 
-    border: 3px solid black;
+    border: 2px solid black;
     border-radius: 5px;
 }
 
@@ -56,13 +61,13 @@
 .button.red.hover {
     background-color: #F06E37;
     border-color: #F06E37;
-    border: 3px solid black;
+    border: 2px solid black;
     border-radius: 5px;
 }
 
 .button.orange.hover {
     background-color: #EDB761;
     border-color: #EDB761;
-    border: 3px solid black;
+    border: 2px solid black;
     border-radius: 5px;
 }
