--- a/src/components/CourseTable/CourseTable.css
+++ b/src/components/CourseTable/CourseTable.css
@@ -9,6 +9,18 @@
 }
 
 .courseSearch {
-    margin: 20px 0 20px 20px;
+    margin: 20px 0 10px 20px;
     align-self: flex-start;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.courseFilter {
+    align-self: flex-start;
+    margin-left: 20px;
+}
+
+.filterButton {
+    margin-right: 10px;
 }
