--- a/src/components/CourseDetails/CourseDetails.css
+++ b/src/components/CourseDetails/CourseDetails.css
@@ -4,8 +4,8 @@
     border: 1px dashed black;
     border-radius: 5px;
 
-    min-height: 400px;
-    max-height: 400px;
+    min-height: 100%;
+    max-height: 100%;
 }
 
 .detailsColInfo {
