--- a/src/components/CourseTable/CourseTable.css
+++ b/src/components/CourseTable/CourseTable.css
@@ -2,7 +2,7 @@
 
 .courseContainer {
     max-width: 95%;
-    height: 65%;
+    height: 55%;
     margin: 0 auto;
 
     display: flex;
@@ -64,6 +64,7 @@
 
 .courseControls {
     display: flex;
+    margin-left: 20px;
 }
 
 .redInfo,
