--- a/src/components/CourseDetails/CourseDetails.css
+++ b/src/components/CourseDetails/CourseDetails.css
@@ -26,9 +26,24 @@
 } 
 
 .exitDetailsButton {
-    font-size: 1rem;
+    font-size: 1.2rem;
     margin: 10px;
-    padding: 10px;
+    padding: 10px 13px 10px 13px;
+
+    border: 1px solid white;
+    background-color: grey;
+    color: white;
+
+    border-radius: 5px;
+}
+
+.exitDetailsButton:hover {
+    background-color: black;
+    transition: 0.7s;
+}
+
+button {
+    cursor: pointer;
 }
 
 
