--- a/src/components/TeacherDetails/TeacherDetails.css
+++ b/src/components/TeacherDetails/TeacherDetails.css
@@ -36,6 +36,7 @@
 .InfoDetails {
   float: left;
 }
+
 .teacher-item {
   margin-bottom: 10px;
   margin-right: 20px;
@@ -52,6 +53,9 @@
 .infoContainer {
   width: 95%;
   border: 1px dashed black;
+}
+.infoContainer > div {
+  border: solid 1px #000;
 }
 
 .infoContainer svg {
