--- a/src/components/CourseTable/CourseTable.css
+++ b/src/components/CourseTable/CourseTable.css
@@ -96,8 +96,8 @@
 .switch {
     position: relative;
     display: inline-block;
-    width: 60px;
-    height: 34px;
+    width: 34px;
+    height: 60px;
   }
   
   .switch input { 
@@ -139,9 +139,9 @@
   }
   
   input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
+    -webkit-transform: translateY(-26px);
+    -ms-transform: translateY(-26px);
+    transform: translateY(-26px);
   }
   
   /* Rounded sliders */
