--- a/src/components/CourseTable/CourseTable.css
+++ b/src/components/CourseTable/CourseTable.css
@@ -23,14 +23,12 @@
 }
 
 .courseFilter {
-    margin: 20px 0 10px 40px;
-
-    display: flex;
-    flex-direction: column;
+    margin: auto 10px auto 20px;
+    padding-top: 35px;
 }
 
 .courseInfo {
-    margin: 20px 0 10px 40px;
+    margin: 40px 0 10px 140px;
 
     display: flex;
     flex-direction: column;
@@ -39,15 +37,21 @@
 .searchLabel,
 .filterLabel {
     font-size: 1rem;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 
     align-self: flex-start;
 }
 
+.filterLabel {
+  margin-bottom: 15px;
+}
+
 .searchBar {
-    margin-right: 10px;
+    margin: 10px 10px 0 0;
     font-size: 1rem;
     padding: 8px;
+    height: 40px;
+    border-radius: 10px;
 }
 
 .filterButton {
@@ -57,12 +61,15 @@
     background-color: #F0EDED;
     font-size: 1rem;
     border-radius: 5px;
+    background-color: #d5d5db;
 }
 
 .filterButton.pressed {
     
     color: white;
-    background-color: #2196F3;
+    background-color: #4d4c54;
+    border: none;
+    font-weight: bold;
 }
 
 .courseControls {
@@ -96,8 +103,8 @@
 .switch {
     position: relative;
     display: inline-block;
-    width: 60px;
-    height: 34px;
+    width: 34px;
+    height: 60px;
   }
   
   .switch input { 
@@ -131,17 +138,17 @@
   }
   
   input:checked + .slider {
-    background-color: #2196F3;
+    background-color: #4d4c54;
   }
   
   input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
+    box-shadow: 0 0 1px #4d4c54;
   }
   
   input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
+    -webkit-transform: translateY(-26px);
+    -ms-transform: translateY(-26px);
+    transform: translateY(-26px);
   }
   
   /* Rounded sliders */
