Move search into own component

--- a/src/components/CourseTable/CourseTable.css
+++ b/src/components/CourseTable/CourseTable.css
@@ -1,8 +1,6 @@
-
-
 .courseContainer {
-    max-width: 95%;
-    height: 55%;
+    width: 100%;
+    height: 100%;
     margin: 0 auto;
 
     display: flex;
@@ -13,157 +11,3 @@
     height: 100%;
     width: 100%;
 }
-
-.courseSearch {
-    margin: 20px 20px 10px 20px;
-    align-self: flex-start;
-
-    display: flex;
-    flex-direction: column;
-}
-
-.courseFilter {
-    margin: auto 10px auto 20px;
-    padding-top: 35px;
-}
-
-.courseInfo {
-    margin: 40px 0 10px 140px;
-
-    display: flex;
-    flex-direction: column;
-}
-
-.searchLabel,
-.filterLabel {
-    font-size: 1rem;
-    margin-bottom: 10px;
-
-    align-self: flex-start;
-}
-
-.filterLabel {
-  margin-bottom: 15px;
-}
-
-.searchBar {
-    margin: 10px 10px 0 0;
-    font-size: 1rem;
-    padding: 8px;
-    height: 40px;
-    border-radius: 10px;
-}
-
-.filterButton {
-    margin-right: 10px;
-
-    padding: 8px;
-    background-color: #F0EDED;
-    font-size: 1rem;
-    border-radius: 5px;
-    background-color: #d5d5db;
-}
-
-.filterButton.pressed {
-    
-    color: white;
-    background-color: #4d4c54;
-    border: none;
-    font-weight: bold;
-}
-
-.courseControls {
-    display: flex;
-    margin-left: 20px;
-}
-
-.redInfo,
-.yellowInfo {
-    margin-top: 5px;
-    display: flex;
-}
-
-.redInfo {
-    margin-bottom: 10px;
-}
-
-.redBox,
-.yellowBox {
-    padding: 10px;
-    background-color: #F06E37;
-
-    margin-right: 10px;
-}
-
-.yellowBox {
-    background-color: #EDB761;
-}
-
-/*Style for slider (toggle on search)*/
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 34px;
-    height: 60px;
-  }
-  
-  .switch input { 
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input:checked + .slider {
-    background-color: #4d4c54;
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px #4d4c54;
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateY(-26px);
-    -ms-transform: translateY(-26px);
-    transform: translateY(-26px);
-  }
-  
-  /* Rounded sliders */
-  .slider.round {
-    border-radius: 34px;
-  }
-  
-  .slider.round:before {
-    border-radius: 50%;
-  }
-
-  .searchToggle {
-      display: flex;
-  }
-
-  .toggler {
-      padding-top: 3px;
-  }
