--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,17 @@
     transform: rotate(360deg);
   }
 }
+
+.container1 {
+  width: 100%;
+  height: 40%;
+
+  margin: 0 30px 0 30px;
+}
+
+.container2 {
+  width: 100%;
+  height: 60%;
+
+  margin: 0 30px 0 30px;
+}
