--- a/src/components/CourseDetails/CourseDetails.css
+++ b/src/components/CourseDetails/CourseDetails.css
@@ -1,3 +1,8 @@
+.courseDetailsContainer {
+    height: 100%;
+    width: 100%;
+}
+
 .courseFlex {
     margin: 40px 20px 40px 20px;
     display: flex;
