--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,4 +1,3 @@
-
 .courseSearch {
     margin: 20px 20px 10px 20px;
     align-self: flex-start;
@@ -152,3 +151,30 @@
   .toggler {
       padding-top: 3px;
   }
+
+  .overViewToggle {
+    margin: 50px 0 10px 140px;
+
+  }
+  
+  .ovToggleButton {
+    background-image: url(/flowImg.png);
+    background-size: 20px;
+    background-color: transparent; /* make the button transparent */
+    background-repeat: no-repeat;  /* make the background image appear only once */
+    background-position: 6px 12px;
+    cursor: pointer;        /* make the cursor like hovering over an <a> element */
+    height: 50px;           /* make this the size of your image */
+    padding: 10px 5px 10px 35px;     /* make text start to the right of the image */
+    vertical-align: middle; /* align the text vertically centered */
+
+    border: 2px solid black;
+    border-radius: 15px;
+    font-weight: bold;
+
+  }
+
+  .ovToggleButton:hover {
+    background-color: #d5d5db;
+    transition: 0.7s;
+}
