--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,29 +1,29 @@
 .courseSearch {
-    margin: 20px 20px 10px 20px;
-    align-self: flex-start;
+  margin: 20px 20px 10px 20px;
+  align-self: flex-start;
 
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .courseFilter {
-    margin: auto 10px auto 20px;
-    padding-top: 35px;
+  margin: auto 10px auto 20px;
+  padding-top: 35px;
 }
 
 .courseInfo {
-    margin: 40px 0 10px 140px;
+  margin: 40px 0 10px 140px;
 
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .searchLabel,
 .filterLabel {
-    font-size: 1rem;
-    margin-bottom: 10px;
+  font-size: 1rem;
+  margin-bottom: 10px;
 
-    align-self: flex-start;
+  align-self: flex-start;
 }
 
 .filterLabel {
@@ -31,150 +31,153 @@
 }
 
 .searchBar {
-    margin: 10px 10px 0 0;
-    font-size: 1rem;
-    padding: 8px;
-    height: 40px;
-    border-radius: 10px;
+  margin: 10px 10px 0 0;
+  font-size: 1rem;
+  padding: 8px;
+  height: 40px;
+  border-radius: 10px;
 }
 
 .filterButton {
-    margin-right: 10px;
+  margin-right: 10px;
 
-    padding: 8px;
-    background-color: #F0EDED;
-    font-size: 1rem;
-    border-radius: 5px;
-    background-color: #d5d5db;
+  padding: 8px;
+  background-color: #f0eded;
+  font-size: 1rem;
+  border-radius: 5px;
+  background-color: #d5d5db;
 }
 
 .filterButton.pressed {
-    
-    color: white;
-    background-color: #4d4c54;
-    border: none;
-    font-weight: bold;
+  color: white;
+  background-color: #4d4c54;
+  border: none;
+  font-weight: bold;
+}
+.filterButton.pressed.bg-red {
+  background-color: #f06e37;
+}
+.filterButton.pressed.bg-orange {
+  background-color: #edb761;
 }
 
 .courseControls {
-    display: flex;
-    margin-left: 20px;
+  display: flex;
+  margin-left: 20px;
 }
 
 .redInfo,
 .yellowInfo {
-    margin-top: 5px;
-    display: flex;
+  margin-top: 5px;
+  display: flex;
 }
 
 .redInfo {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .redBox,
 .yellowBox {
-    padding: 10px;
-    background-color: #F06E37;
+  padding: 10px;
+  background-color: #f06e37;
 
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 .yellowBox {
-    background-color: #EDB761;
+  background-color: #edb761;
 }
 
 /*Style for slider (toggle on search)*/
 .switch {
-    position: relative;
-    display: inline-block;
-    width: 34px;
-    height: 60px;
-  }
-  
-  .switch input { 
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input:checked + .slider {
-    background-color: #4d4c54;
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px #4d4c54;
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateY(-26px);
-    -ms-transform: translateY(-26px);
-    transform: translateY(-26px);
-  }
-  
-  /* Rounded sliders */
-  .slider.round {
-    border-radius: 34px;
-  }
-  
-  .slider.round:before {
-    border-radius: 50%;
-  }
+  position: relative;
+  display: inline-block;
+  width: 34px;
+  height: 60px;
+}
 
-  .searchToggle {
-      display: flex;
-  }
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
 
-  .toggler {
-      padding-top: 3px;
-  }
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
 
-  .overViewToggle {
-    margin: 50px 0 10px 140px;
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
 
-  }
-  
-  .ovToggleButton {
-    background-image: url(/flowImg.png);
-    background-size: 20px;
-    background-color: transparent; /* make the button transparent */
-    background-repeat: no-repeat;  /* make the background image appear only once */
-    background-position: 6px 12px;
-    cursor: pointer;        /* make the cursor like hovering over an <a> element */
-    height: 50px;           /* make this the size of your image */
-    padding: 10px 5px 10px 35px;     /* make text start to the right of the image */
-    vertical-align: middle; /* align the text vertically centered */
+input:checked + .slider {
+  background-color: #4d4c54;
+}
 
-    border: 2px solid black;
-    border-radius: 15px;
-    font-weight: bold;
+input:focus + .slider {
+  box-shadow: 0 0 1px #4d4c54;
+}
 
-  }
+input:checked + .slider:before {
+  -webkit-transform: translateY(-26px);
+  -ms-transform: translateY(-26px);
+  transform: translateY(-26px);
+}
 
-  .ovToggleButton:hover {
-    background-color: #d5d5db;
-    transition: 0.7s;
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.searchToggle {
+  display: flex;
+}
+
+.toggler {
+  padding-top: 3px;
+}
+
+.overViewToggle {
+  margin: 50px 0 10px 140px;
+}
+
+.ovToggleButton {
+  background-image: url(/flowImg.png);
+  background-size: 20px;
+  background-color: transparent; /* make the button transparent */
+  background-repeat: no-repeat; /* make the background image appear only once */
+  background-position: 6px 12px;
+  cursor: pointer; /* make the cursor like hovering over an <a> element */
+  height: 50px; /* make this the size of your image */
+  padding: 10px 5px 10px 35px; /* make text start to the right of the image */
+  vertical-align: middle; /* align the text vertically centered */
+
+  border: 2px solid black;
+  border-radius: 15px;
+  font-weight: bold;
+}
+
+.ovToggleButton:hover {
+  background-color: #d5d5db;
+  transition: 0.7s;
 }
