--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,13 @@ html {
   margin: 0;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 body {
   height: 100%;
   margin: 0;
-  overflow: hidden; /* Hide scrollbars */
 
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
