--- a/src/App.css
+++ b/src/App.css
@@ -125,11 +125,14 @@
     opacity: 1;
   }
 }
-
-.container1 {
-  width: 100%;
-  height: 50%;
-
-  margin: 0 30px 0 30px;
+.view-container {
+  width: 100vw;
+}
+.view-container > div {
+  width: 95%;
+  margin: 0 auto;
 }
 
+.container1 > div {
+  margin-top: 30px;
+}
