--- a/src/components/CourseDetails/CourseDetails.css
+++ b/src/components/CourseDetails/CourseDetails.css
@@ -1,54 +1,52 @@
 .courseDetailsContainer {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
 }
 
 .courseFlex {
-    margin: 40px 20px 40px 20px;
-    display: flex;
-    border: 1px dashed black;
-    border-radius: 5px;
-    
-    width: 95%;
-    min-height: 100%;
-    max-height: 100%;
+  /* margin: 40px 20px 40px 20px; */
+  display: flex;
+  border: 1px dashed black;
+  border-radius: 5px;
+
+  /* width: 95%; */
+  min-height: 100%;
+  max-height: 100%;
 }
 
 .detailsColInfo {
-    display: flex;
-    flex-direction: column;
-    width: 25%;
+  display: flex;
+  flex-direction: column;
+  width: 25%;
 
-    max-height: 100%;
+  max-height: 100%;
 }
 
 .detailsCol {
-    width: 75%;
+  width: 75%;
 }
 
 .detailsCol.exit {
-    width: 5%;
-} 
+  width: 5%;
+}
 
 .exitDetailsButton {
-    font-size: 1.2rem;
-    margin: 10px;
-    padding: 10px 13px 10px 13px;
+  font-size: 1.2rem;
+  margin: 10px;
+  padding: 10px 13px 10px 13px;
 
-    border: 1px solid white;
-    background-color: grey;
-    color: white;
+  border: 1px solid white;
+  background-color: grey;
+  color: white;
 
-    border-radius: 5px;
+  border-radius: 5px;
 }
 
 .exitDetailsButton:hover {
-    background-color: black;
-    transition: 0.7s;
+  background-color: black;
+  transition: 0.7s;
 }
 
 button {
-    cursor: pointer;
+  cursor: pointer;
 }
-
-
