--- a/src/components/CourseDetailsRow/CourseDetailsRow.css
+++ b/src/components/CourseDetailsRow/CourseDetailsRow.css
@@ -1,10 +1,13 @@
 .detailsRow {
-    min-width: 100%;
     margin: 5px 20px 0 20px;
     padding-top: 10px;
-
+    
     display: flex;
     flex-direction: column;
+}
+
+.detailsRow.info {
+    min-width: 100%;
  }
 
 .courseDetailCourseLabel {
