--- a/src/components/StackedTeachers/StackedTeachers.css
+++ b/src/components/StackedTeachers/StackedTeachers.css
@@ -29,49 +29,57 @@
 }
 
 .labelText {
-  font-size: 0.7em;
+  font-size: 0.85em;
 }
 
 .labelFor {
   opacity: 1;
-  padding: 5px;
+  padding: 7px;
   margin-right: 10px;
   background-color: #fcd26c;
+  max-height: 10px;
 }
 .labelFrl {
-  padding: 5px;
+  padding: 7px;
   margin-right: 10px;
   background-color: #fcd26c;
+  max-height: 10px;
 }
 .labelOvn {
-  padding: 5px;
+  padding: 7px;
   margin-right: 10px;
   background-color: #c9d897;
+  max-height: 10px;
 }
 .labelLa {
-  padding: 5px;
+  padding: 7px;
   margin-right: 10px;
   background-color: #365780;
+  max-height: 10px;
 }
 .labelHa {
-  padding: 5px;
+  padding: 7px;
   margin-right: 10px;
   background-color: #faad5f;
+  max-height: 10px;
 }
 .labelEx {
-  padding: 5px;
+  padding: 7px;
   margin-right: 10px;
   background-color: #7bbfcc;
+  max-height: 10px;
 }
 .labelKu {
-  padding: 5px;
+  padding: 7px;
   margin-right: 10px;
   background-color: #9dd0d1;
+  max-height: 10px;
 }
 .labelAdm {
-  padding: 5px;
+  padding: 7px;
   margin-right: 10px;
   background-color: #ec9747;
+  max-height: 10px;
 }
 
 .sChart::-webkit-scrollbar {
