--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,14 +1,10 @@
-.courseSearch {
-  margin: 20px 20px 10px 20px;
+.courseSearch,
+.courseFilter {
+  margin: 25px 20px 10px 50px;
   align-self: flex-start;
 
   display: flex;
   flex-direction: column;
-}
-
-.courseFilter {
-  margin: auto 10px auto 20px;
-  padding-top: 35px;
 }
 
 .courseInfo {
@@ -27,7 +23,7 @@
 }
 
 .filterLabel {
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 }
 
 .searchBar {
@@ -63,7 +59,8 @@
 
 .courseControls {
   display: flex;
-  margin-left: 20px;
+  margin-left: 35px;
+  width: 100vw;
 }
 
 .redInfo,
@@ -80,6 +77,7 @@
 .yellowBox {
   padding: 10px;
   background-color: #f06e37;
+  max-height: 10px;
 
   margin-right: 10px;
 }
@@ -172,12 +170,15 @@ input:checked + .slider:before {
   padding: 10px 5px 10px 35px; /* make text start to the right of the image */
   vertical-align: middle; /* align the text vertically centered */
 
-  border: 2px solid black;
+  box-shadow: 1px 1px 1px black;
+  background-color: #d5d5db;
+
   border-radius: 15px;
-  font-weight: bold;
 }
 
 .ovToggleButton:hover {
-  background-color: #d5d5db;
+  background-color: #606060;
+  color: white;
   transition: 0.7s;
+  box-shadow: 1px 1px 1px white;
 }
