--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -155,6 +155,24 @@ input:checked + .slider:before {
   padding-top: 3px;
 }
 
+.togglerTip {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+
+  position: absolute;
+  z-index: 1;
+  margin-top: 70px;
+}
+
+.toggler:hover .togglerTip {
+  visibility: visible;
+}
+
 .overViewToggle {
   margin: 50px 0 10px 140px;
 }
