--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -61,8 +61,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-left: 35px;
-  margin-right: 35px;
+  padding-left: 35px;
+  padding-right: 35px;
 }
 
 .redInfo,
